config/deploy_backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: miapp-backend
  labels:
    name: miapp-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: miapp-backend
  template:
    metadata:
      labels:
        app: miapp-backend
    spec:
      containers:
        - name: miapp-backend
          image: mnroman/miapp-backend:v1
          imagePullPolicy: Always
          ports:
            - name: backend-port
              containerPort: 5000
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
    name: miapp-backend
spec:
    selector:
        app: miapp-backend
    ports:
        - protocol: TCP
          port: 5000
          targetPort: 5000
