config/deploy_frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: miapp-frontend
  labels:
    name: miapp-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: miapp-frontend
  template:
    metadata:
      labels:
        app: miapp-frontend
    spec:
      containers:
        - name: miapp-frontend
          image: mnroman/miapp-frontend:v1
          imagePullPolicy: Always
          ports:
            - name: frontend-port
              containerPort: 8000
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
    name: miapp-frontend
spec:
    selector:
        app: miapp-frontend
    ports:
        - protocol: TCP
          port: 8000
          targetPort: 8000
