config/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/use-regex: "true"
  generation: 5
  labels:
    app: miapp-frontend
  name: miapp-frontend-ingress
spec:
  rules:
  - host: miapp
    http:
      paths:
      - backend:
          service:
            name: miapp-frontend
            port:
              number: 8000
        path: /.*
        pathType: Prefix
status:
  loadBalancer:
    ingress:
    - ip: 10.250.1.90
